--- a/src/components/Sidebar/style.scss
+++ b/src/components/Sidebar/style.scss
@@ -61,3 +61,9 @@
   min-width: 60px !important;
   width: 60px !important;
 }
+
+.anticon-shopping-cart{
+float: left !important;
+font-size: 30px !important;
+margin: -3px !important;
+}
