add and remove from cart

--- a/src/app/dashboard/cartdetails/cart.scss
+++ b/src/app/dashboard/cartdetails/cart.scss
@@ -10,6 +10,11 @@
     width: 50%;
 }
 
+.item-no{
+    width: 5%;
+    font-size: 20px;
+}
+
 .ant-notification .ant-notification-topRight{  
     z-index: 9999;
 }
