--- a/src/app/dashboard/dashboard.scss
+++ b/src/app/dashboard/dashboard.scss
@@ -19,3 +19,28 @@
     float: right;
     font-size: 20px;
 }
+
+.filter-btn{
+    border-radius: 20px;
+    margin-right: 5px;
+}
+
+.ant-card-meta-description{ 
+    height: 50px !important;
+    font-family: cursive !important;
+    
+}
+
+.ant-card-meta-title{
+    font-family: cursive !important;
+    font-size: medium;
+}
+
+.ant-select-selector{
+    height: 40px !important;
+    border-radius: 20px !important;
+}
+
+.ant-select-selection-item{
+    font-weight: 800;
+}
