--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -21,3 +21,8 @@ float: right;
 color: darkblue;
 font-size: large;
 }
+
+.anticon-shopping-cart{
+    float: left !important;
+    font-size: 30px !important;
+    }
