--- a/src/app/dashboard/cartdetails/cart.scss
+++ b/src/app/dashboard/cartdetails/cart.scss
@@ -18,3 +18,8 @@
 .ant-notification .ant-notification-topRight{  
     z-index: 9999;
 }
+
+.ant-avatar-image{
+    width: 40px;
+    height: 50px;
+}
