--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -26,3 +26,12 @@ font-size: large;
     float: left !important;
     font-size: 30px !important;
     }
+
+    .header-content{
+        font-size: 15px !important;
+        font-weight: 800 !important;
+    }
+
+    .ant-input-group-addon{
+        visibility: hidden;
+    }
